--- a/stylell.css
+++ b/stylell.css
@@ -31,7 +31,7 @@ background:transparent;
 
 .blob{
   border-radius: 50%;
-  background: #661BAC;
+  background: #E71669;
   /* Other sample colors:
   Orange: #e8630a
   Pink: #EA3281
